# Docker-Janitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
configs/: janitor.example.yaml
janitor/: __init__.py  cli.py  config.py
janitor/audit/: __init__.py  logger.py
janitor/cleanup/: __init__.py  engine.py
janitor/history/: store.py
janitor/notifier/: __init__.py  base.py  cli_reporter.py  email.py  slack.py  webhook.py
janitor/policy/: __init__.py  engine.py  rules.py
janitor/scanner/: __init__.py  core.py  docker_client.py  images.py  models.py
janitor/utils/: __init__.py  logger.py
janitor/web/: __init__.py  routes.py
janitor/web/templates/: audit.html  base.html  cleanup.html  containers.html  dashboard.html  graph.html  images.html  networks.html  policy.html  projects.html  settings.html  stats.html  volumes.html
logs/: audit.jsonl  scan_history.jsonl
specs/drafts/: 2026-03-docker-janitor.md
tests/test_cleanup/: test_engine.py
tests/test_notifier/: test_cli_reporter.py
tests/test_policy/: test_engine.py
tests/test_scanner/: test_core.py
